--- a/sensappdroid-main/pom.xml
+++ b/sensappdroid-main/pom.xml
@@ -70,9 +70,14 @@
       <artifactId>jackson-jaxrs</artifactId>
     </dependency>
     <dependency>
-  <groupId>com.google.android</groupId>
-  <artifactId>support-v4</artifactId>
-</dependency>
+      <groupId>com.google.android</groupId>
+      <artifactId>support-v4</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
+      <version>1.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
